force-app/main/default/objects/Contact/fields/Hobby__c.field-meta.xml
<CustomField>
    <fullName>Hobby__c</fullName>
    <label>Hobby</label>
    <length>100</length>
    <type>Text</type>
</CustomField>