force-app/main/default/objects/Contact/fields/ProximoAniversarioContato__c.field-meta.xml
<CustomField>
    <fullName>ProximoAniversarioContato__c</fullName>
    <formula>DATE(IF(TODAY()&lt;date(year(today()),month(DataDeNascimento__c),DAY(DataDeNascimento__c)),YEAR(TODAY()),YEAR(TODAY())+1),month(DataDeNascimento__c),
DAY(DataDeNascimento__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proximo aniversário do contato</label>
    <type>Date</type>
</CustomField>