force-app/main/default/objects/Contact/validationRules/ObrigatoriedadeTelefoneOUCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadeTelefoneOUCelular</fullName>
    <active>true</active>
    <description>Obriga o usuario a colocar telefone ou celular.</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; (ISBLANK(Phone) &amp;&amp; ISBLANK(MobilePhone)) &amp;&amp; NOT($Permission.Integracao)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Telefone ou Celular são obrigatórios!</errorMessage>
</ValidationRule>