force-app/main/default/objects/Contact/validationRules/ValidaDataNascimento.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaDataNascimento</fullName>
    <active>true</active>
    <description>A data de nascimento precisa ser maior que o dia de hoje.</description>
    <errorConditionFormula>DataDeNascimento__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>DataDeNascimento__c</errorDisplayField>
    <errorMessage>Por favor insira uma data válida</errorMessage>
</ValidationRule>