force-app/main/default/objects/Contact/validationRules/VR_03_CTT_MascaraTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_03_CTT_MascaraTelefone</fullName>
    <active>true</active>
    <description>Máscara do campo telefone</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
NOT(ISBLANK(Phone))
&amp;&amp;
!REGEX(Phone ,&quot;^(\\(\\d{2}\\)\\ \\d{4}\\d?\\-\\d{4})|(\\d{8,13})?$&quot;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>O Telefone deve estar no seguinte formato: (xx)xxxx-xxxx</errorMessage>
</ValidationRule>