force-app/main/default/objects/Contact/validationRules/VR_04_CTT_MascaraCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_04_CTT_MascaraCelular</fullName>
    <active>true</active>
    <description>Máscara do campo celular.</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
NOT(ISBLANK(MobilePhone))
&amp;&amp;
!REGEX(MobilePhone,&quot;^(\\([0-9]{2}\\)\\ [0-9]{4,5}\\-[0-9]{4})|(\\d{8,13})$&quot;)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>O Celular deve estar no seguinte formato: (xx)xxxxx-xxxx</errorMessage>
</ValidationRule>